# n8n-langfuse-shipper

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  NOTICE  README.md  docker-compose.yml  notice_check.toml  pyproject.toml
.github/: copilot-instructions.md
infra/: README.md  containerapp-shipper.bicep  setup-secrets.fish  shipper.bicepparam  shipper.parameters.json
scripts/: check_notice.py
src/: __init__.py  __main__.py  checkpoint.py  config.py  db.py  mapper.py  media_api.py  media_uploader.py  observation_mapper.py  shipper.py
src/mapping/: __init__.py  binary_sanitizer.py  generation.py  id_utils.py  io_normalizer.py  mapping_context.py  model_extractor.py  orchestrator.py  parent_resolution.py  prompt_detection.py  prompt_resolution.py  prompt_version_resolver.py  time_utils.py
src/models/: langfuse.py  n8n.py
src/n8n_langfuse_shipper/: __init__.py  __main__.py  checkpoint.py  config.py  db.py  mapper.py  media_api.py  observation_mapper.py  shipper.py
src/n8n_langfuse_shipper/mapping/: __init__.py  generation.py  io_normalizer.py  model_extractor.py  node_extractor.py  orchestrator.py  parent_resolution.py  prompt_detection.py  prompt_resolution.py  prompt_version_resolver.py  time_utils.py
src/n8n_langfuse_shipper/models/: n8n.py
tests/: conftest.py  test_agent_envelope_expansion.py  test_agent_iteration_metadata.py  test_agent_tool_parenting.py  test_ai_extraction_basic.py  test_ai_extraction_filtering.py  test_ai_extraction_integration.py  test_ai_extraction_safety.py  test_ai_extraction_sentinel_fallback.py  test_ai_filtering.py  test_bedrock_anthropic_models.py  test_binary_and_truncation.py  test_binary_unwrap_merge.py  test_config_settings.py  test_db_stream.py  test_error_status_and_observation.py  test_exporter_additional_attributes.py  test_extended_binary_discovery.py  test_extended_binary_scan_limit.py  test_flatted_parsing.py  test_flattening.py  test_generation_heuristic.py  test_generation_input_extraction.py  test_helper_functions.py  test_input_propagation.py  test_item_level_binary_promotion.py  test_langfuse_connection_creds.py  test_lmchat_system_prompt_strip.py  test_mapper.py  test_media_api_tokens.py  test_media_disabled.py  test_media_item_level_promotion_tokens.py  test_media_observation_link.py  test_media_preview_hoist.py  test_media_status_patch.py  test_media_surface_inplace.py  test_media_token_json_serialization.py  test_media_upload_success.py  test_model_parameter_fallback.py  test_negative_inferred_parent.py  (+16 more)
