[project]
name = "n8n-langfuse-shipper"
version = "0.3.0"
description = "High-throughput backfill service to ship n8n execution data to Langfuse via OpenTelemetry"
authors = [ { name = "Rodger Blom", email = "rodger.blom@truelime.nl" } ]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Apache-2.0" }

# Core runtime dependencies
dependencies = [
    "pydantic>=2.7.0,<3.0.0",
    "pydantic-settings>=2.2.0,<3.0.0",
    "psycopg[binary]>=3.1.18,<4.0.0",
    "typer>=0.12.0,<1.0.0",
    "opentelemetry-sdk>=1.25.0,<2.0.0",
    "opentelemetry-exporter-otlp-proto-http>=1.25.0,<2.0.0",
    "httpx>=0.27.0,<1.0.0",
    "orjson>=3.9.15,<4.0.0",
    "tenacity>=8.2.3,<9.0.0",
    "python-dotenv>=1.0.0,<2.0.0"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pre-commit>=3.7.0",
    "langfuse>=3.0.0"
]
# Legacy 'media' extra removed (Azure Blob path deprecated). Media tokens use
# Langfuse HTTP API only; no extra dependency required.

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.typer]
# Placeholder for potential Typer-specific configuration

[tool.ruff]
line-length = 100

# New lint configuration section (migrated from deprecated top-level keys).
[tool.ruff.lint]
select = ["E", "F", "I", "B", "N", "ASYNC"]  # intentionally excluding "UP" for now (minimal style changes)

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
show_error_codes = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

# It automatically finds all your code in the 'src' directory.
[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
n8n-shipper = "n8n_langfuse_shipper.__main__:app"
